# MagNet-IQ

./: .gitignore  EDA.ipynb  ImproveModel.ipynb  ML_Pipeline.ipynb  README.md  import_data.ipynb  magnet_iq_dashboard.html  main.py  pyproject.toml
models/: crystal_system_encoder.pkl  feature_cols_v2.pkl
website/client/: package.json
website/client/src/app/: globals.css  layout.tsx  page.tsx
website/client/src/app/about/: page.tsx
website/client/src/app/explore/: page.tsx
website/client/src/app/predict/: page.tsx
website/client/src/app/recommend/: page.tsx
website/client/src/components/: ElementPills.tsx  GradeStars.tsx  LoadingSpinner.tsx  MaterialCard.tsx  Navbar.tsx  ScoreBar.tsx
website/client/src/lib/: api.ts
website/client/src/types/: index.ts
