[project]
name = "magnet-iq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipywidgets>=8.1.8",
    "matplotlib>=3.11.0",
    "mp-api>=0.46.4",
    "pandas>=3.0.3",
    "pymatgen>=2026.5.4",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "xgboost>=3.3.0",
]
